# toml-edit

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.legacy/: _document.py  _public.py  _scanner.py  _validator.py
benches/: bench_vs_tomlkit.py
benchmarks/: bench_mutate.py  bench_parse.py  bench_pyproject.py
docs/: access.md  api.md  building.md  comments.md  editing.md  errors.md  index.md  quickstart.md  reading.md
src/toml_edit/: __init__.py  _document.py  _nodes.py  _parser.py  _public.py  _synthesise.py
src/tomle/: __init__.py  _document.py  _errors.py  _nodes.py  _parser.py  _public.py  _synthesise.py
src/tomlrt/: __init__.py  _array.py  _array_comments.py  _build.py  _comment_views.py  _comments.py  _container.py  _document.py  _errors.py  _inline_ops.py  _invariants.py  _kind.py  _layout_ops.py  _nodes.py  _parser.py  _paths.py  _public.py  _render.py  _scalar.py  _scanner.py  _section_build.py  _separator.py  _slots.py  _synthesise.py  _trivia.py  _validator.py  _values.py
tests/: _toml_str.py  test_basic.py  test_comments.py  test_compliance.py  test_dict_semantics.py  test_edit_golden.py  test_fuzz.py  test_hypothesis.py  test_live_attach.py  test_mutation.py  test_phase3a.py  test_phase3b.py  test_phase3c.py  test_phase3d.py  test_phase3d_dict_methods.py  test_phase3d_dotted.py  test_phase4_synth.py  test_scanner.py  test_spacing.py  test_synthesise_and_io.py  test_toml11.py  test_validator.py
