[project]
name = "toml-edit"
version = "0.1.0"
description = "A format-preserving TOML parser and writer for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David Hotham", email = "david.hotham@blueyonder.co.uk" }]
keywords = [
  "toml",
  "toml-parser",
  "toml-writer",
  "toml-edit",
  "format-preserving",
  "round-trip",
  "config",
  "configuration",
  "pyproject",
]
dependencies = []
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/dch/toml-edit"
Issues = "https://github.com/dch/toml-edit/issues"
Changelog = "https://github.com/dch/toml-edit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "pytest>=9",
  "pytest-cov>=5",
  "hypothesis>=6",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
addopts = ["-ra"]
testpaths = ["tests"]
strict = true

[tool.coverage.run]
source = ["src/toml_edit"]
branch = true

[tool.coverage.report]
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
  "pragma: no cover",
]

[tool.mypy]
files = ["src", "tests"]
strict = true
warn_unreachable = true
disallow_any_unimported = true
enable_error_code = [
  "deprecated",
  "explicit-override",
  "ignore-without-code",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unused-awaitable",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",               # mccabe
  "COM",               # flake8-commas
  "CPY",               # flake8-copyright
  "D",                 # pydocstyle
  "DOC",               # pydoclint
  "ERA",               # eradicate
  "PD",                # pandas-vet
  "PLR",               # pylint-refactor
  "T20",               # flake8-print
  "ANN401",            # any-type
  "E203",              # whitespace before ':'
  "S101",              # assert-used
]
extend-safe-fixes = ["TC"]
unfixable = ["F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
